# checkers

./: .gitignore  .gitmodules  AUTHORS  ChangeLog  Makefile.am  NEWS  README  configure.ac
etb/: 0000.ceitb.tar.bz2  0100.ceitb.tar.bz2  0101.ceitb.tar.bz2  0200.ceitb.tar.bz2  0201.ceitb.tar.bz2  0202.ceitb.tar.bz2  0300.ceitb.tar.bz2  0301.ceitb.tar.bz2  0302.ceitb.tar.bz2  0303.ceitb.tar.bz2  0400.ceitb.tar.bz2  0401.ceitb.tar.bz2  0402.ceitb.tar.bz2  0403.ceitb.tar.bz2  0404.ceitb.tar.bz2  0500.ceitb.tar.bz2  0501.ceitb.tar.bz2  0502.ceitb.tar.bz2  0503.ceitb.tar.bz2  0504.ceitb.tar.bz2  0505.ceitb.tar.bz2  0600.ceitb.tar.bz2  0601.ceitb.tar.bz2  0602.ceitb.tar.bz2  0603.ceitb.tar.bz2  0604.ceitb.tar.bz2  0700.ceitb.tar.bz2  0701.ceitb.tar.bz2  0702.ceitb.tar.bz2  0703.ceitb.tar.bz2  0704.ceitb.tar.bz2  0800.ceitb.tar.bz2  0801.ceitb.tar.bz2  0802.ceitb.tar.bz2  0803.ceitb.tar.bz2  0804.ceitb.tar.bz2  0805.ceitb.tar.bz2  0808.ceitb.tar.bz2  0900.ceitb.tar.bz2  0901.ceitb.tar.bz2  (+22 more)
include/: Makefile.am  checkers.h  mu-data-struct.h  mu-parser.h
m4/: valgrind.m4
script/: check-update.py  play.py  print-tournament.py  requirements.txt  tournament.py
source/: Makefile.am  ai-mcts.c  ai-random.c  ai-robust.c  ai.awk  endgame-base.c  game.c  gen-magic.c  gen-moves.c  inc.gen-moves.c  main.c  mu-data-struct.c  mu-parser.c
validation/: 001-empty.io  002-start-fen.io  003-simple-moves.io  004-black-s-moves.io  005-ws-moves-complex.io  006-bs-moves-complex.io  007-ws-take.io  008-bs-take.io  009-ws-long-take.io  010-bs-long-take.io  011-ws-should-take.io  012-bs-should-take.io  013-ws-two-takes.io  015-ws-max-long-take.io  016-bs-max-long-take.io  017-wm-moves.io  018-bm-moves.io  019-wm-lock.io  020-bm-lock.io  021-wm-simple-complex.io  022-bm-simple-complex.io  023-wm-take.io  024-bm-take.io  025-wm-long-take.io  026-bm-long-take.io  027-wm-take-crazy.io  028-bm-take-crazy.io  029-petrov-ziric-game.io  030-ziric-flikstein-game.io  031-debug-position-code.io  Makefile.am  insider.c  run-insider  run-insider.in  validation.sh.in
web-server/: server.py
web-server/static/: gui.js  img  index.html  logic.js  yoo-lib.js
